Revert "specified the title of the contact page"
This reverts commit bd39a0c4beeba84d336479058720639ed9ba9c8b.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/style.production.css" />
     <script src="js/tota11y.min.js"></script>
-    <title>Paul Schmitt Portfolio - About Page/Personal Details</title>
+    <title>Paul Schmitt Portfolio - About</title>
 </head>
 
 <body>
