--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
     <script src="js/tota11y.min.js"></script>
-    <title>Paul Schmitt Portfolio - Contact Details</title>
+    <title>Paul Schmitt Portfolio - Contact</title>
 </head>
 
 <body>
