styled the button on the contact page

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 <label for="message">Message: </label>
                 <textarea maxlength="600" id="message" required></textarea>
             </p>
-            <input type="submit" alt="button to submit email and phone entries" value="Send message" />
+            <input type="submit" class="button" alt="button to submit email and phone entries" value="Send message" />
         </form>
     </main>
     <footer class="page-footer">
