updatd my work references

--- a/work.html
+++ b/work.html
@@ -43,13 +43,24 @@
         <div class="grid">
             <!-- Grid items will live here -->
             <div class="grid__item">
-                <h2>Mobile web app</h2>
+                <h2>Meet app</h2>
+                <img src="img/meet_app.png" width="500px">
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally,
-                    I've created
-                    the HTML and CSS templates.
+                    This exercise was done as part of my CareerFoundry web development training. I implemented an
+                    exemplary PWA App for
+                    event searching in a variety of cities.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <h3>Used technologies:</h3>
+                <ul>
+                    <li>React</li>
+                    <li>Google OAuth</li>
+                    <li>AWS for website hosting</li>
+                    <li>Jest</li>
+                    <li>Pupeteer</li>
+                    <li>Atatus</li>
+                    <li>React Recharts</li>
+                </ul>
+                <a href="https://github.com/Paul-1783/meet" target="_blank">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>E-Commerce Website</h2>
