--- a/work.html
+++ b/work.html
@@ -43,7 +43,9 @@
         <div class="grid">
             <!-- Grid items will live here -->
             <div class="grid__item">
-                <h2>Meet app</h2>
+                <a href="https://paul-1783.github.io/meet/" target="_blank">
+                    <h2>Meet app</h2>
+                </a>
                 <img src="img/meet_app.png" width="500px">
                 <p>
                     This exercise was done as part of my CareerFoundry web development training. I implemented an
