Overhauled the website

--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Open+Sans:wght@300;400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="js/tota11y.min.js"></script>
     <title>Paul Schmitt Portfolio</title>
 </head>
@@ -65,41 +65,103 @@
                 <a href="https://github.com/Paul-1783/meet" target="_blank">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>E-Commerce Website</h2>
+                <a href="" target="_blank">
+                    <h2>MyFlix App</h2>
+                </a>
+                <img src="img/myFlix.png" width="500px">
                 <p>
-                    I participated in the creation of an real-world e-commerce shop that sold physical items.
-                    I've added parts to the admin interface and checkout.
+                    The server-side component of a “movies” web application. The web
+                    application provides users with access to information about different
+                    movies, directors, and genres. Users will be able to sign up, update their
+                    personal information, and create a list of their favorite movies.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <h3>Used technologies:</h3>
+                <ul>
+                    <li>Javascript</li>
+                    <li>Node.js</li>
+                    <li>Express</li>
+                    <li>MongoDB</li>
+                </ul>
+                <a href="https://github.com/Paul-1783/myFlix" target="_blank">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Review Site</h2>
+                <a href="https://rococo-choux-147ff4.netlify.app/" target="_blank">
+                    <h2>Pokédex App</h2>
+                </a>
+                <img src="img/pokedex-app.png" width="500px">
                 <p>
-                    I created a Tripadvisor site which spezialized on local sights here in Munich.
+                    A small application that loads data from an external API and enables the viewing of data points in
+                    detail.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <h3>Used technologies:</h3>
+                <ul>
+                    <li>Html</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                </ul>
+                <a href="https://github.com/Paul-1783/pokedex-board" target="_blank">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Video Conferencing Tool</h2>
+                <a href="https://myflixmovielibrary.netlify.app/login" target="_blank">
+                    <h2>MyFlix-client App</h2>
+                </a>
+                <img src="img/myFlix-client.png" width="500px">
                 <p>
-                    I helped writing the programm for generating the invite code so people can join.
+                    The client-side for an app called myFlix based on its
+                    existing server-side code (the respective API is based on REST, the server also provides a
+                    database). The client was build with React technology.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <h3>Used technologies:</h3>
+                <ul>
+                    <li>Html</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>React</li>
+                    <li>React-Bootstrap</li>
+                    <li>Parcel</li>
+                </ul>
+                <a href="https://github.com/Paul-1783/myFlix-client" target="_blank">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Digital Downloads Plattform</h2>
+                <a href="https://paul-1783.github.io/myFlix-Angular-client/welcome" target="_blank">
+                    <h2>MyFlix-Angular-client App</h2>
+                </a>
+                <img src="img/myFlix-Angular-client.png" width="500px">
                 <p>
-                    I worked on the frontend-facing area on which people handle purchases and download the files.
+                    The client-side for an app called myFlix based on its
+                    existing server-side code (the respective API is based on REST, the server also provides a
+                    database). The client was build with Angular technology.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <h3>Used technologies:</h3>
+                <ul>
+                    <li>Html</li>
+                    <li>CSS</li>
+                    <li>Typescript</li>
+                    <li>Angular</li>
+                    <li>Angular Material</lI>
+                    <li>Typedoc</li>
+                    <li>JSDoc</li>
+                </ul>
+                <a href="https://github.com/Paul-1783/myFlix-Angular-client" target="_blank">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Job Board IAUS</h2>
+                <a href="" target="_blank">
+                    <h2>Chat App</h2>
+                </a>
+                <img src="img/chat-app7.png" width="500">
                 <p>
-                    A two-sided marketplace application: I worked on the frontend of the area where people submited
-                    jobs.
+                    A chat app for mobile devices using React Native. The app provides users with a chat interface and
+                    options to share images and their location.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <h3>Used technologies:</h3>
+                <ul>
+                    <li>Javascript</li>
+                    <li>React Native</li>
+                    <li>React Navigation</li>
+                    <li>Expo platform</li>
+                    <li>Android Studio</li>
+                </ul>
+                <a href=" https://github.com/Paul-1783/chat-app" target="_blank">See project on GitHub</a>
             </div>
         </div>
     </section>
