--- a/contact.html
+++ b/contact.html
@@ -74,9 +74,9 @@
         <p>Find me on</p>
         <div class="social-media">
             <!-- Github logo -->
-            <img src="img/github_icon.svg" alt="github">
-            <!-- Twitter logo -->
-            <img src="img/twitter_icon.svg" alt="twitter">
+            <a href="https://github.com/Paul-1783" target="_blank">
+                <img src="img/github_icon.svg" alt="github">
+            </a>
             <!-- LinkedIn logo -->
             <a href="https://www.linkedin.com/in/paul-schmitt-01820937/" target="_blank"><img
                     src="img/linkedin_icon.svg" alt="linkedin"></a>
