Overhauled Contact form

--- a/contact.html
+++ b/contact.html
@@ -44,10 +44,10 @@
         Deutschland<br />
         <br />
         <div>Tel <a href="tel:+49701450049">+49 1234567</a><br /></div>
-        <div>Skype <a href="skype:paulplosiv"> paulplosiv</a><br /></div>
+        <div>Skype <a href="skype:paulplosiv?call"> paulplosiv</a><br /></div>
         <div>
             Email
-            <a href="mailto.paulschmitt144@gmail.com">paulschmitt144@gmail.com</a><br />
+            <a href="mailto:paulschmitt144@gmail.com">paulschmitt144@gmail.com</a><br />
         </div>
         <div><a href="mailto:paulschmitt144@gmail.com">Contact me</a></div>
         <p>
