--- a/work.html
+++ b/work.html
@@ -48,9 +48,10 @@
                 </a>
                 <img src="img/meet_app.png" width="500px">
                 <p>
-                    This exercise was done as part of my CareerFoundry web development training. I implemented an
-                    exemplary PWA App for
-                    event searching in a variety of cities.
+                    I implemented an exemplary App for event searching in a variety of cities. It is a serverless,
+                    progressive web application (PWA) with React using a
+                    test-driven development (TDD) technique. The application uses the Google
+                    Calendar API to fetch upcoming events.
                 </p>
                 <h3>Used technologies:</h3>
                 <ul>
