Added github url

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="img/bewerbung_gross.JPG" class="profile__portrait" alt="Paul Schmitt Portrait">
         <h1>Hello World!</h1>
         <p>My name is Paul Schmitt. I am a web developer from Germany.</p>
-        <a href="#">Check out some of my code</a>
+        <a href="https://github.com/Paul-1783">Check out some of my code</a>
     </main>
 
     <footer class="page-footer">
